--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple reader for comics, man(ga|hua|hwa) written in javascript",
   "main": "app/main.js",
   "scripts": {
-    "start": "iojs --harmony_classes --harmony_arrow_functions server.js",
+    "start": "iojs --harmony_classes --harmony_arrow_functions --harmony_modules --harmony --es_staging --use-strict server.js",
     "test": "echo 'no test yet sorry bro'"
   },
   "keywords": [
@@ -18,6 +18,9 @@
     "uglify-js": "^2.4.22"
   },
   "dependencies": {
+    "bluebird": "^2.9.26",
+    "image-size": "^0.3.5",
+    "lodash": "^3.9.3",
   },
   "repository": {
     "type": "git",
