--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "dependencies": {
     "bluebird": "^2.9.26",
-    "image-size": "^0.3.5",
-    "lodash": "^3.9.3"
+    "cheerio": "^0.19.0",
+    "gm": "^1.18.1",
+    "imagemagick": "^0.1.3",
+    "lodash": "^3.9.3",
+    "mkdirp": "^0.5.1",
+    "request": "^2.57.0",
+    "xml2js": "^0.4.9"
   },
   "repository": {
     "type": "git",
